--- a/css/fonts.css
+++ b/css/fonts.css
@@ -81,3 +81,7 @@
     url('fonts/roboto/roboto-v20-latin-700.ttf') format('truetype'),
     url('fonts/roboto/roboto-v20-latin-700.svg#Roboto') format('svg');
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
